// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Koala's identify destination action: all fields 1`] = `
Object {
  "email": "gezohpa@okacege.mr",
  "identifies": Array [
    Object {
      "context": Object {
        "testType": "9KiI(J5%U@MvmY",
      },
      "device_ip": "9KiI(J5%U@MvmY",
      "email": "gezohpa@okacege.mr",
      "message_id": "9KiI(J5%U@MvmY",
      "sent_at": "2106-08-16T09:28:56.483Z",
      "traits": Object {
        "testType": "9KiI(J5%U@MvmY",
      },
      "type": "identify",
    },
  ],
  "ip": "9KiI(J5%U@MvmY",
  "traits": Object {
    "testType": "9KiI(J5%U@MvmY",
  },
}
`;

exports[`Testing snapshot for Koala's identify destination action: required fields 1`] = `
Object {
  "identifies": Array [
    Object {
      "message_id": "9KiI(J5%U@MvmY",
      "sent_at": "2106-08-16T09:28:56.483Z",
      "type": "identify",
    },
  ],
  "traits": Object {},
}
`;
